# kb-coder

./: .gitignore  LICENSE  README.md  build_files.py  build_log_index.py  build_pipeline.py  build_relations.py  build_symbols.py  code-analysis-result.md  package.json  pyproject.toml
code_demo_project/: settings.gradle.kts
code_demo_project/app/: build.gradle.kts
code_demo_project/app/src/main/: AndroidManifest.xml
code_demo_project/app/src/main/java/com/demo/calculator/: MainActivity.kt
code_demo_project/app/src/main/java/com/demo/calculator/domain/: CalculatorEngine.kt  ExpressionTokenizer.kt  InfixToPostfixConverter.kt  PostfixExpressionEvaluator.kt
code_demo_project/app/src/main/java/com/demo/calculator/model/: CalculationOutcome.kt  CalculatorToken.kt
code_demo_project/app/src/main/java/com/demo/calculator/ui/: CalculatorInputBuffer.kt  DisplayFormatter.kt
code_demo_project/app/src/main/res/layout/: activity_main.xml
code_demo_project/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
code_demo_project/logs/: log_index.jsonl  log_index_stats.json
docs/: mcp-server.md
kb/: files.jsonl
logs/: log_index.jsonl  log_index_stats.json
scripts/: mcp-stdio.mjs
tools/: __init__.py  kb_tools.py  log_tools.py  query_kb.py  query_log_index.py  unified_mcp_server.py
